Closed Bug 154296 Opened 24 years ago Closed 24 years ago

Back/Forward context menu items don't properly gray out

Categories

(Camino Graveyard :: General, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: winnie, Assigned: bryner)

Details

(Keywords: polish)

Attachments

(1 file)

Back/Forward context menu items don't properly gray out. UI polish issue.
Blocks: 154286
Keywords: polish
taking, have patch
Assignee: saari → bryner
Attached patch patchSplinter Review
Comment on attachment 89739 [details] [diff] [review] patch verbal r=ben
Attachment #89739 - Flags: review+
checked in.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Verified with 07-01 build on OS 10.1.5.
Status: RESOLVED → VERIFIED
No longer blocks: 154286
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: