Hooking up enabling/disabling of back and forward context menu items (bug 154296).  r=ben.